# verbio-tech-test

./: CMakeLists.txt  README.md  example.txt  exercise.cpp  exercise.h  iparser.h  main.cpp  numberParser.cpp  numberParser.h  numbersUtilities.h  parser.h  stringUtilities.h  tokenNumber.cpp  tokenNumber.h
